src/objects/Offer_Treatment__c.object
<CustomObject>
    <description>Offer Treatment</description>
    <fields>
        <fullName>Campaign_Project_Segment_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Project Segment Summary</label>
        <referenceTo>Campaign_Project_Segment_Summary__c</referenceTo>
        <relationshipLabel>Offer Treatment</relationshipLabel>
        <relationshipName>Offer_Treatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <formula>Campaign_Project_Segment_Summary__r.Campaign_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Definition_Label__c</fullName>
        <formula>Offer_Definition__r.Offer_Guest_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Definition Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Definition</label>
        <referenceTo>Offer_Definition__c</referenceTo>
        <relationshipLabel>Offer Treatment</relationshipLabel>
        <relationshipName>Offer_Treatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Offer Treatment</label>
    <nameField>
        <displayFormat>OT-{0000000000}</displayFormat>
        <label>Offer Treatment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Treatment</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>